--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,3 +15,5 @@ bind '%' split-window -c "#{pane_current_path}" -h
 # ステータスバーの色を設定する
 set -g status-fg white
 set -g status-bg blue
+# コピーモードでvimキーバインドを使う
+setw -g mode-keys vi
