--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,18 @@
+#tmux cheetsheet
+#---------------------------------------
+# 1.設定ファイル再読込
+#  tmux source path/to/.tmux.conf
+#  キーバインドとして再読込するなら prefix :source path/to/.tmux.conf
+# 2. セッションアタッチ(バックエンドで起動しているセッションをターミナルに接続)
+#  tmux a -t session_name
+# 3. セッションの移動
+#  prefix + s
+# 4. デタッチ
+#  prefix + d
+# 5. プラグインインストール
+#  prefix + shift + i
+#---------------------------------------
+
 #Display time
 set -g display-time 3500
 # C-aに変更する
@@ -15,5 +30,17 @@ bind '%' split-window -c "#{pane_current_path}" -h
 # ステータスバーの色を設定する
 set -g status-fg white
 set -g status-bg blue
+# マウス操作を有効にする
+set-option -g mouse on
 # コピーモードでvimキーバインドを使う
 setw -g mode-keys vi
+# ペイン移動
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+#ステータスバーを下に配置する
+set-option -g status-position bottom
+#set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]
+#PCのステータスバーの追加
+#set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
