--- a/vim/toml/dein.toml
+++ b/vim/toml/dein.toml
@@ -35,7 +35,32 @@ repo = 'prabirshrestha/asyncomplete.vim'
 
 [[plugins]]
 repo = 'prabirshrestha/asyncomplete-lsp.vim'
-
+hook_add = '''
+" Enable flake8
+let g:lsp_settings = {
+\  'pylsp-all': {
+\    'workspace_config': {
+\      'pylsp': {
+\        'configurationSources': ['flake8'],
+\        'plugins': {
+\          'flake8': {
+\            'enabled': 1
+\          },
+\          'mccabe': {
+\            'enabled': 0
+\          },
+\          'pycodestyle': {
+\            'enabled': 0
+\          },
+\          'pyflakes': {
+\            'enabled': 0
+\          },
+\        }
+\      }
+\    }
+\  }
+\}
+'''
 #================ 冬眠 プラグイン ===================
 #[[plugins]]
 #repo = 'petobens/poet-v'
