--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,3 +44,6 @@ set-option -g status-position bottom
 #set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]
 #PCのステータスバーの追加
 #set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+#クリップボードに共有
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
