--- a/mise/config.toml
+++ b/mise/config.toml
@@ -9,6 +9,7 @@ ghq = "1.8.0"
 aws-cli = "2.27.18"
 kubectl = "1.31.0"
 gh = "latest"
+tmux = "3.5"
 
 [settings]
 idiomatic_version_file_enable_tools = []
