--- a/mise/config.toml
+++ b/mise/config.toml
@@ -15,6 +15,7 @@ go = "1.24"
 peco = "0.5.11"
 fzf = "0.62"
 viddy = "1.3"
+neovim = "0.11.2"
 
 [settings]
 idiomatic_version_file_enable_tools = []
