--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,3 +47,21 @@ set-option -g status-position bottom
 #クリップボードに共有
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+
+# TPM (Tmux Plugin Manager) の設定
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm でインストール
+set -g @plugin 'tmux-plugins/tpm'
+
+# ログ記録プラグイン
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# ログ記録のキーバインド
+# prefix + shift + p: 現在のペインのログ記録開始/停止
+# prefix + alt + p: 画面の内容を保存
+# prefix + alt + shift + p: 完全な履歴を保存
+
+# ログ保存先の設定
+set -g @logging-path '~/logs/tmux'
+
+# プラグインマネージャーの初期化（この行は最後に置く）
+run '~/.tmux/plugins/tpm/tpm'
