--- a/_.config/mise/config.toml
+++ b/_.config/mise/config.toml
@@ -1,13 +1,13 @@
 [tools]
 helmfile = "0.170.1"
-node = "20.11.1"
+node = "20.19.5"
 python = "3.12.5"
-kustomize = "5.6.0"
+kustomize = "5.7.0"
 tflint = "0.52.0"
 poetry = "2.1.1"
 ghq = "1.8.0"
-aws-cli = "2.27.18"
-kubectl = "1.31.0"
+aws-cli = "2.27.57"
+kubectl = "1.32.0"
 gh = "latest"
 tmux = "3.5"
 tfenv = "3.0.0"
@@ -18,6 +18,11 @@ viddy = "1.3"
 neovim = "0.11.2"
 yq = "4.9.8"
 uv = "0.7.13"
+kind = "0.29.0"
+yarn = "latest"
+delta = "latest"
+circleci = "latest"
+trivy = "latest"
 
 [settings]
 idiomatic_version_file_enable_tools = []
