--- a/.editorconfig
+++ b/.editorconfig
@@ -7,25 +7,37 @@ root = true
 # Unix-style newlines with a newline ending every file
 # すべてのファイルに適用される基本設定
 [*]
-end_of_line = lf                    # 改行コードはLF（Unix形式）
-insert_final_newline = true         # ファイル末尾に改行を挿入
-charset = utf-8                     # 文字エンコーディングはUTF-8
-trim_trailing_whitespace = true     # 行末の空白を削除
+# 改行コードはLF（Unix形式）
+end_of_line = lf
+# ファイル末尾に改行を挿入
+insert_final_newline = true
+# 文字エンコーディングはUTF-8
+charset = utf-8
+# 行末の空白を削除
+trim_trailing_whitespace = true
 
 # Shell scripts
 [*.{sh,bash}]
-indent_style = space                # インデントはスペース
-indent_size = 2                     # インデント幅は2
-shell_variant = bash                # シェルの種類はbash
-binary_next_line = true             # &&や||を次の行の先頭に配置
-switch_case_indent = true           # case文の内容をインデント
-space_redirects = true              # リダイレクト演算子（>、<）の周りにスペース
-keep_padding = false                # 余分な空白を削除
-function_next_line = false          # 関数定義の{を同じ行に配置
+# インデントはスペース、幅は2
+indent_style = space
+indent_size = 2
+# シェルの種類はbash
+shell_variant = bash
+# &&や||を次の行の先頭に配置
+binary_next_line = true
+# case文の内容をインデント
+switch_case_indent = true
+# リダイレクト演算子（>、<）の周りにスペース
+space_redirects = true
+# 余分な空白を削除
+keep_padding = false
+# 関数定義の{を同じ行に配置
+function_next_line = false
 
 # Markdown files
+# 行末の空白を保持（改行に必要な場合があるため）
 [*.md]
-trim_trailing_whitespace = false    # 行末の空白を保持（改行に必要な場合があるため）
+trim_trailing_whitespace = false
 
 # YAML files
 [*.{yml,yaml}]
@@ -51,4 +63,3 @@ indent_size = 2
 [*.lua]
 indent_style = space
 indent_size = 2
-
