--- a/_.config/mise/config.toml
+++ b/_.config/mise/config.toml
@@ -1,7 +1,7 @@
 [tools]
 helm = "3.19.2"
 helmfile = "0.170.1"
-node = "24.12.0"
+node = "24.13.0"
 python = "3.14.2"
 kustomize = "5.8.0"
 tflint = "0.52.0"
@@ -29,6 +29,7 @@ pipx = "1.8.0"
 aws-vault = "7.2.0"
 pnpm = "10.26.0"
 lefthook = "2.0.13"
+lazydocker = "0.24.3"
 
 [settings]
 idiomatic_version_file_enable_tools = []
