--- a/_.config/mise/config.toml
+++ b/_.config/mise/config.toml
@@ -30,6 +30,7 @@ aws-vault = "7.2.0"
 pnpm = "10.26.0"
 lefthook = "2.0.13"
 lazydocker = "0.24.3"
+ffmpeg = "8.0.1"
 
 [settings]
 idiomatic_version_file_enable_tools = []
